Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -148,14 +148,11 @@
 
 \wheelchart{1cm}{0.4cm}{
   29.75/13em/accent!60/\small 2010 - Tink \\ Développeur web,
-  16.55/9em/accent!75/\small 2012 - Dejardins \\ \small Lead développeur,
+  16.55/9em/accent!75/\small 2012 - Desjardins \\ \small Lead développeur,
   37.15/12em/accent!10/\small 2008 -  Alphamosaik \\ \small Intégrateur  Sharepoint,
   16.55/12em/accent!30/\small 2009 - Techtra \\ \small Intégrateur Sharepoint
 }
-
-\tiny \hypertarget{page2}{Plus d'information sur les postes en page 2}
-
-
+\hypertarget{page2}{Détails page suivante}
 \clearpage
 \cvsection{Expérience}
 \cvevent{\hyperlink{page2}{Développeur web}}{Tink}{Juillet 2010 -- Septembre 2012}{\scriptsize 87 rue Prince, Suite 140, Montréal, QC}
