--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -15,28 +15,21 @@
 % \cvachievement{\faFemale}{Inspiring women in tech}{Youngest CEO on Fortune's list of 50 most powerful women}
 
 
-\cvsection{Education}
+\cvsection{Formation}
 
 \cvevent{Baccalauréat \newline Gestion d'entreprise}{HEC Montréal}{Sep 2011-Dec 2013}{Montreal, QC}
-\begin{itemize}
-\item Gestion d'entreprise
-\item Analyse des processus organisationnels
-\item Systèmes d'information et analyse d'affaires
-\end{itemize}
+Gestion d'entreprise \newline
+Analyse des processus organisationnels \newline
+Systèmes d'information et analyse d'affaires
 
-\cvsection{Certificats}
+\divider
+
 \cvevent{MCTS}{Microsoft Certified Technology Specialist}{Année 2009}{}
 Configuration WSS 3, MOSS 2007
 
 \divider
 
 \cvevent{Développement d’applications internet}{France Télécom - AFTEC}{Oct 2002-Jun 2003}{Nantes, France}
-
-% \begin{itemize}
-% \item Mise à jour et maintenance de l’intranet de la plateforme Rennes Mabilais
-% \item Mise à jour du site internet régional
-% \item Réalisation de sites intranet pour les agences de ventes
-% \end{itemize}
 
 \divider
 
